--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,54 +22,49 @@ main {
     display: flex;
     background: hsl(0, 0%, 100%);
     border-radius: 10px;
-    width: 80%;
+    width: 70%;
     height: 80%;
 }
 
 .sign-up {
     display: flex;
     flex-direction: column;
-    width: 65%;
-    padding: 2rem 2rem 2rem 3rem;
+    width: 50%;
+    padding: 4.5rem 3rem 3rem 4rem;
 }
 
 .sign-up__title {
-    font-size: 32px;
-    padding: 0.5rem 0 0 0;
+    padding: .5rem 0;
+    font-size: 36px;
     font-weight: bold;
     color:hsl(234, 29%, 20%);
 }
 
 span p, .sign-up__receive {
-    font-size: 16px;
-    line-height: 1.3;
+    font-size: 18px;
+    line-height: 1.2;
 }
 
 span p {
-    padding: 1rem 0 0 0;
+    padding: 1.25rem 0;
 }
 
-.sign-up__receive {
-    width: 100%;
-    margin: .5rem 0;
-}
 
 .container{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    padding: .5rem 0;
 }
 .container img {
-    padding: 0 .5rem 0 0;
+    padding: 0 1rem 0 0;    
 }
 
 .sign-up__form {
     text-align: start;
-    margin: 0.25rem 0
+    padding: 2rem 0 0;
 }
 
 .sign-up__form label {
-    font-size: 12px;
+    font-size: 14px;
     color:hsl(233, 41%, 34%);
 }
 
@@ -78,15 +73,25 @@ span p {
     border-radius: 7px;
     padding: 1rem;
     width: 100%;
-    margin: .25rem 0 0 0;
+    margin: .5rem 0 .75rem 0;
+}
+
+.sign-up__form button {
+    font-weight: bold;
+    color: #FDFDFD;
+    margin: 1rem 0;
+    padding: 1rem 3rem;
+    width: 100%;
+    background: hsl(233, 41%, 34%);
 }
 
 .imagem__newsletter {
     width: 50%;
-    margin: .5rem;
+    margin: 1rem;
     display: flex;
     background: url(../images/illustration-sign-up-desktop.svg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right;
+    border-radius: 15px;
 }
