--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,38 +11,49 @@
 
 body {
     background: hsl(234, 29%, 20%);
-    height: 100vh;
-    font-family:'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
 
 main {
     display: flex;
-    background: hsl(0, 0%, 100%);
-    border-radius: 10px;
-    width: 70%;
     height: 80%;
+    padding: .75rem;
+    width: 80%;
+    background: hsl(0, 0%, 100%);
+    border-radius: 20px;
+}
+
+main section:first-child {
+    width: 50%;
+}
+
+main section:nth-child(2) {
+    width: 50%;
 }
 
 .sign-up {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    padding: 4.5rem 3rem 3rem 4rem;
+    padding: 3.5rem 1.5rem 3rem 3.5rem;
+    justify-content: center;
+
 }
 
 .sign-up__title {
-    padding: .5rem 0;
-    font-size: 36px;
+    padding: 0 0 .25rem 0;
+    font-size: 48px;
     font-weight: bold;
-    color:hsl(234, 29%, 20%);
+    color: hsl(234, 29%, 20%);
 }
 
-span p, .sign-up__receive {
+span p,
+.sign-up__receive {
     font-size: 18px;
-    line-height: 1.2;
+    line-height: 1.1;
 }
 
 span p {
@@ -50,22 +61,27 @@ span p {
 }
 
 
-.container{
+.container {
     display: flex;
+    align-items: center;
     padding: .5rem 0;
 }
+
+.container p {
+    padding: .25rem 0;
+}
+
 .container img {
-    padding: 0 1rem 0 0;    
+    padding: 0 .75rem 0 0;
 }
 
 .sign-up__form {
-    text-align: start;
-    padding: 2rem 0 0;
+    padding: 1.5rem 0 0 0;
 }
 
 .sign-up__form label {
-    font-size: 14px;
-    color:hsl(233, 41%, 34%);
+    font-size: 16px;
+    color: hsl(233, 41%, 34%);
 }
 
 .sign-up__form input {
@@ -73,25 +89,20 @@ span p {
     border-radius: 7px;
     padding: 1rem;
     width: 100%;
-    margin: .5rem 0 .75rem 0;
+    margin: .75rem 0 1.5rem 0;
 }
 
 .sign-up__form button {
     font-weight: bold;
     color: #FDFDFD;
-    margin: 1rem 0;
     padding: 1rem 3rem;
     width: 100%;
     background: hsl(233, 41%, 34%);
 }
 
-.imagem__newsletter {
-    width: 50%;
-    margin: 1rem;
-    display: flex;
-    background: url(../images/illustration-sign-up-desktop.svg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-    border-radius: 15px;
+.imagem-newsletter {
+    border-radius: 10px;
+    background: url(../images/illustration-sign-up-desktop.svg) right / cover no-repeat;
+    margin-left: 2rem;
+    height: 100%
 }
