--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -12,7 +12,7 @@
         padding: 3rem 1rem 2rem 3rem;
     }
 
-    .sign-up__title {
+    .title {
         font-size: 36px;
     }
 
@@ -43,7 +43,7 @@
         padding: 1.5rem 0 .5rem 1.5rem;
     }
 
-    .sign-up__title {
+    .title {
         font-size: 36px;
     }
 
@@ -105,7 +105,7 @@
         line-height: 1.1;
     }
 
-    .sign-up__title {
+    .title {
         padding-top: .5rem;
         font-size: 32px
     }
